//
// Created by student on 18.11.2019.
//

#ifndef INC_06_OBSERVER_PATTERN_OBSERVER_H
#define INC_06_OBSERVER_PATTERN_OBSERVER_H

#endif //INC_06_OBSERVER_PATTERN_OBSERVER_H

class Observer{
public:
    void notify(float value);
};